--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,16 @@
             <version>0.9.0</version>
         </dependency>
 
-  
+		<!-- for using jackson annotations @JsonManagedReference and @JsonBackreference-->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
