--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
             <version>2.3.2</version>
         </dependency>
 
+
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring4</artifactId>
@@ -171,6 +172,12 @@
             <artifactId>greenmail</artifactId>
             <version>1.5.5</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
