--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.datasource.url =jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
-spring.datasource.username =${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password =${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.username = root
+spring.datasource.password = qw357753
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-localhost.url =jdbc:mysql://localhost:3306/?serverTimezone=UTC
+localhost.url =jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
 script.create =create database studhub
 script.drop =drop database studhub
 skip.db.init =true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
-studhub.app.jwtSecret =${JWT_SECRET}
-studhub.app.jwtExpiration =${JWY_EXPIRATION}
+studhub.app.jwtSecret = jwtStudHubSecretKey
+studhub.app.jwtExpiration = 86400
 
 #Mail Properties
 spring.mail.host=smtp.gmail.com
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.username= andrewdobrianskiy@gmail.com
+spring.mail.password= qw357753
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
