fixed application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ script.drop=drop database studhub
 skip.db.init=true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 studhub.app.jwtSecret=${JWT_SECRET}
-studhub.app.accessTokenExpiration=86400
-studhub.app.refreshTokenExpiration=864000
+studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
+studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
 
 #Mail Properties
 spring.mail.host=smtp.gmail.com
