--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,7 @@
                         </goals>
                         <configuration>
                             <files>
-                                <file>application.properties</file>
+                                <file>src/main/resources/application.properties</file>
                             </files>
                         </configuration>
                     </execution>
@@ -218,7 +218,7 @@
                         </goals>
                         <configuration>
                             <files>
-                                <file>application.properties</file>
+                                <file>src/main/resources/application.properties</file>
                             </files>
                         </configuration>
                     </execution>
