--- a/application.properties
+++ b/application.properties
@@ -1,15 +1,15 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
-spring.datasource.username=bla
-spring.datasource.password=bla
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 localhost.url=jdbc:mysql://localhost:3306/?serverTimezone=UTC
 script.create=create database studhub
 script.drop=drop database studhub
 skip.db.init=true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
-studhub.app.jwtSecret=jwtStudHubSecretKey
-studhub.app.accessTokenExpiration=86400
-studhub.app.refreshTokenExpiration=864000
+studhub.app.jwtSecret=${JWT_SECRET}
+studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
+studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
 
 #Mail Properties
 spring.mail.host=smtp.gmail.com
