google login added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDiale
 studhub.app.jwtSecret=${JWT_SECRET}
 studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
 studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
+studhub.google.clientId=${GOOGLE_CLIENT_ID}
 
 #Mail Properties
 spring.mail.host=smtp.gmail.com
