--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=true
 
 #Client Properties
-client.host=http://localhost:4200
+client.host=${CLIENT_HOST}
+studhub.mail.noreply=${MAIL_NO_REPLY}
+client.signature=${CLIENT_SIGNATURE}
