--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,11 @@ studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
 studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
 studhub.google.clientId=${GOOGLE_CLIENT_ID}
 
+server.ssl.key-store= classpath:keystore.jks
+server.ssl.key-store-password= 123456
+server.ssl.keyStoreType= JKS
+server.ssl.keyAlias= tomcatssl
+
 #Mail Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.username=${SPRING_MAIL_USERNAME}
