--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/studhub
+spring.datasource.url = jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 1111
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
