Facebook Service impl added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ studhub.app.jwtSecret=${JWT_SECRET}
 studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
 studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
 studhub.google.clientId=${GOOGLE_CLIENT_ID}
+spring.social.facebook.appId=${FACEBOOK_CLIENT_ID}
 
 server.ssl.key-store= classpath:keystore.jks
 server.ssl.key-store-password= 123456
