--- a/application.properties
+++ b/application.properties
@@ -10,7 +10,7 @@ spring.mvc.view.suffix= .jsp
 
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-localhost.url = jdbc:mysql://localhost:3306/
+localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
 script.create = create database studhub
 script.drop = drop database studhub
 skip.db.init = true
