--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-localhost.url=jdbc:mysql://localhost:3306/?serverTimezone=UTC
+#localhost.url=jdbc:mysql://localhost:3306/?serverTimezone=UTC
 script.create=create database studhub
 script.drop=drop database studhub
 skip.db.init=true
