--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 script.create=create database studhub
 script.drop=drop database studhub
 skip.db.init=true
-spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
 studhub.app.jwtSecret=${JWT_SECRET}
 studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
 studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
