--- a/application.properties
+++ b/application.properties
@@ -14,7 +14,7 @@ localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
 script.create = create database studhub
 script.drop = drop database studhub
 skip.db.init = true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 studhub.google.clientId=820600559774-rogh42iso9644ohsprs6g5grb828v20n.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret=jOWf_-f1nAE4JrrV-jyZFZfJ
