--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = 1111
+spring.datasource.url = mysql://bc4c1868cbb6a1:e7f3547d@eu-cdbr-west-02.cleardb.net/heroku_93610e6c0caaee5?reconnect=true
+#spring.datasource.username = root
+#spring.datasource.password = 1111
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 server.port=8080
 
