--- a/application.properties
+++ b/application.properties
@@ -73,9 +73,10 @@
 #client.signature=${CLIENT_SIGNATURE}
 
 
-spring.datasource.url = jdbc:mysql://bc4c1868cbb6a1:e7f3547d@eu-cdbr-west-02.cleardb.net/heroku_93610e6c0caaee5?reconnect=true
-spring.datasource.username = root
-spring.datasource.password = 1111
+
+spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net:3306/heroku_93610e6c0caaee5?reconnect=true
+spring.datasource.username = bc4c1868cbb6a1
+spring.datasource.password = e7f3547d
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 server.port=8080
 
