--- a/application.properties
+++ b/application.properties
@@ -73,10 +73,9 @@
 #client.signature=${CLIENT_SIGNATURE}
 
 
-
-spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net:3306/heroku_93610e6c0caaee5?reconnect=true
-spring.datasource.username = bc4c1868cbb6a1
-spring.datasource.password = e7f3547d
+spring.datasource.url = jdbc:mysql://ivgz2rnl5rh7sphb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/ydhh08o2mpjlcxkx?reconnect=true
+spring.datasource.username = ttppwf0a4oorm4n1
+spring.datasource.password = db8z4n3ei40ql1sl
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 server.port=8080
 
