--- a/application.properties
+++ b/application.properties
@@ -73,7 +73,7 @@
 #client.signature=${CLIENT_SIGNATURE}
 
 
-spring.datasource.url = jdbc:mysql://ivgz2rnl5rh7sphb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/ydhh08o2mpjlcxkx?reconnect=true
+spring.datasource.url = jdbc:mysql://ivgz2rnl5rh7sphb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/ydhh08o2mpjlcxkx
 spring.datasource.username = ttppwf0a4oorm4n1
 spring.datasource.password = db8z4n3ei40ql1sl
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
