change client host

--- a/application.properties
+++ b/application.properties
@@ -107,6 +107,6 @@ spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=true
-client.host=https://localhost:4200
+client.host=https://studhubclient.herokuapp.com
 studhub.mail.noreply=no-reply@studhub-supp.com
 client.signature=https://studhub.com
