hide mail config properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,14 +18,14 @@ server.ssl.keyStoreType= JKS
 server.ssl.keyAlias= tomcatssl
 
 #Mail Properties
-spring.mail.host=smtp.gmail.com
+spring.mail.host=${SPRING_MAIL_HOST}
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.port=587
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=true
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.protocol=${SPRING_MAIL_PROTOCOL}
+spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_SMTP_ENABLE}
+mail.debug=${MAIL_DEBUG}
 
 #Client Properties
 client.host=${CLIENT_HOST}
