--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
             <version>2.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>[Cloudinary API version, e.g. 1.1.3]</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.thymeleaf</groupId>
