--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
 studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
 studhub.google.clientId=${GOOGLE_CLIENT_ID}
 spring.social.facebook.appId=${FACEBOOK_CLIENT_ID}
+spring.social.facebook.appSecret = ${FACEBOOK_SECRET}
 
 server.ssl.key-store= classpath:keystore.jks
 server.ssl.key-store-password= 123456
