Jsoup parser added. Scheduler added

--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,14 @@
             <version>2.0.3.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.12.1</version>
+        </dependency>
+
+
 
 
     </dependencies>
