--- a/pom.xml
+++ b/pom.xml
@@ -127,13 +127,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.cloudinary</groupId>
-            <artifactId>cloudinary-http44</artifactId>
-            <version>[Cloudinary API version, e.g. 1.1.3]</version>
-        </dependency>
-
-
-        <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring4</artifactId>
             <version>2.1.5.RELEASE</version>
@@ -186,6 +179,12 @@
             <groupId>com.google.api-client</groupId>
             <artifactId>google-api-client</artifactId>
             <version>1.22.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.15.0</version>
         </dependency>
 
 
