soring by last message added to chat list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,7 @@ client.signature=${CLIENT_SIGNATURE}
 spring.profiles.active=${SPRING_PROFILE}
 logging.file=${LOG_FILE}
 
+#Facebook Properties
+spring.social.facebook.appId=488187918662697
+spring.social.facebook.appSecret=f5652c746a040fb3e8b43a4c2ba285ad
+
