teachers, universities servise, controller

--- a/application.properties
+++ b/application.properties
@@ -151,6 +151,15 @@ client.signature=https://studhub.com
 studhub.google.clientId=820600559774-rogh42iso9644ohsprs6g5grb828v20n.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret=jOWf_-f1nAE4JrrV-jyZFZfJ
 
+#Facebook Properties
+spring.social.facebook.appId=488187918662697
+spring.social.facebook.appSecret=f5652c746a040fb3e8b43a4c2ba285ad
+
+#Logging
+#Available profiles: file-debug, file-info, file-warn, console-warn, console-info (default spring output).
+spring.profiles.active=console-info
+logging.file=app.log
+
 #cloud.name=${CLOUD_NAME}
 #api.key=${API_KEY}
 #api.secret=${API_SECRET}
