added app properties only for test

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@
 ### VS Code ###
 .vscode/
 
-application.properties
+###application.properties ###
 !src/main/resources/application.properties
 
 *.log
