--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -40,7 +40,7 @@ spring.social.facebook.appSecret=f5652c746a040fb3e8b43a4c2ba285ad
 
 #Logging
 #Available profiles: file-debug, file-info, file-warn, console-warn, console-info (default spring output).
-spring.profiles.active=console-info
+#spring.profiles.active=console-info
 logging.file=app.log
 
 #cloud.name=${CLOUD_NAME}
