tried to fix app properties

--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,56 @@
+spring.datasource.url = ERROR
+spring.datasource.username = ERROR
+spring.datasource.password = ERROR
+spring.datasource.driver-class-name = ERROR
+spring.jpa.properties.hibernate.dialect = ERROR
+localhost.url = ERROR
+script.create = ERROR
+script.drop = ERROR
+skip.db.init = ERROR
+
+# App Properties
+studhub.app.jwtSecret=ERROR
+# expires in a day
+studhub.app.accessTokenExpiration=ERROR
+# expires in a 10 days
+studhub.app.refreshTokenExpiration=ERROR
+
+#Mail Properties
+spring.mail.host=ERROR
+spring.mail.username=ERROR
+spring.mail.password=ERROR
+spring.mail.port=ERROR
+spring.mail.protocol=ERROR
+spring.mail.properties.mail.smtp.auth=ERROR
+spring.mail.properties.mail.smtp.starttls.enable=ERROR
+mail.debug=ERROR
+
+#Client Properties
+client.host=ERROR
+studhub.mail.noreply=ERROR
+client.signature=ERROR
+
+#Google Properties
+studhub.google.clientId=ERROR
+spring.security.oauth2.client.registration.google.clientSecret=ERROR
+
+#Facebook Properties
+spring.social.facebook.appId=ERROR
+spring.social.facebook.appSecret=ERROR
+
+#Logging
+#Available profiles: file-debug, file-info, file-warn, console-warn, console-info (default spring output).
+#spring.profiles.active=console-info
+logging.file=ERROR
+
+#cloud.name=${CLOUD_NAME}
+#api.key=${API_KEY}
+#api.secret=${API_SECRET}
+
+cloud.name=ERROR
+api.key=ERROR
+api.secret=ERROR
+cloudinary.url=ERROR
+spring.servlet.multipart.max-file-size=ERROR
+
 spring.profiles.active=dev
