--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 localhost.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
 script.create = create database studhub
 script.drop = drop database studhub
-skip.db.init = false
+skip.db.init = true
 
 # App Properties
 studhub.app.jwtSecret=jwtStudHubSecretKey
