--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_4f903dab7bce011?reconnect=true
 spring.datasource.username = b08293a472999c
 spring.datasource.password = bc4c4306
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 localhost.url = jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_4f903dab7bce011?reconnect=true
 script.create = create database studhub
