--- a/application.properties
+++ b/application.properties
@@ -61,7 +61,7 @@ spring.datasource.url = jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_4f9
 spring.datasource.username = b08293a472999c
 spring.datasource.password = bc4c4306
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 localhost.url = jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_4f903dab7bce011?reconnect=true
 script.create = create database studhub
 script.drop = drop database studhub
