--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -1,9 +1,9 @@
-spring.datasource.url = jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_4f903dab7bce011
-spring.datasource.username = b08293a472999c
-spring.datasource.password = bc4c4306
+spring.datasource.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
+spring.datasource.username = y6r915q2o6w02ge6
+spring.datasource.password = nhl5kfo8fd1iziaz
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-localhost.url = jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_4f903dab7bce011
+localhost.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
 script.create = create database studhub
 script.drop = drop database studhub
 skip.db.init = true
