--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -1,3 +1,4 @@
+server.port=${PORT:5000}
 spring.datasource.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
 spring.datasource.username = y6r915q2o6w02ge6
 spring.datasource.password = nhl5kfo8fd1iziaz
