tried to set dev active profile in application.properties

--- a/application.properties
+++ b/application.properties
@@ -106,4 +106,4 @@ api.key=728188731214736
 api.secret=8d9xEPsgdsDVGy71nWQxHZggOow
 cloudinary.url=cloudinary://728188731214736:8d9xEPsgdsDVGy71nWQxHZggOow@studhubcloud
 spring.servlet.multipart.max-file-size=4MB
-# spring.profiles.active=dev
+spring.profiles.active=dev
