--- a/application.properties
+++ b/application.properties
@@ -1,109 +1,112 @@
-#spring.datasource.url = ERROR
-#spring.datasource.username = ERROR
-#spring.datasource.password = ERROR
-#spring.datasource.driver-class-name = ERROR
-#spring.jpa.properties.hibernate.dialect = ERROR
-#localhost.url = ERROR
-#script.create = ERROR
-#script.drop = ERROR
-#skip.db.init = ERROR
-#
-## App Properties
-#studhub.app.jwtSecret=ERROR
-## expires in a day
-#studhub.app.accessTokenExpiration=ERROR
-## expires in a 10 days
-#studhub.app.refreshTokenExpiration=ERROR
-#
-##Mail Properties
-#spring.mail.host=ERROR
-#spring.mail.username=ERROR
-#spring.mail.password=ERROR
-#spring.mail.port=ERROR
-#spring.mail.protocol=ERROR
-#spring.mail.properties.mail.smtp.auth=ERROR
-#spring.mail.properties.mail.smtp.starttls.enable=ERROR
-#mail.debug=ERROR
-#
-##Client Properties
-#client.host=ERROR
-#studhub.mail.noreply=ERROR
-#client.signature=ERROR
-#
-##Google Properties
-#studhub.google.clientId=ERROR
-#spring.security.oauth2.client.registration.google.clientSecret=ERROR
-#
-##Facebook Properties
-#spring.social.facebook.appId=ERROR
-#spring.social.facebook.appSecret=ERROR
-#
-##Logging
-##Available profiles: file-debug, file-info, file-warn, console-warn, console-info (default spring output).
-##spring.profiles.active=console-info
-#logging.file=ERROR
-#
-##cloud.name=${CLOUD_NAME}
-##api.key=${API_KEY}
-##api.secret=${API_SECRET}
-#
-#cloud.name=ERROR
-#api.key=ERROR
-#api.secret=ERROR
-#cloudinary.url=ERROR
-#spring.servlet.multipart.max-file-size=ERROR
-spring.datasource.url = jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
-script.create = create database studhub
-script.drop = drop database studhub
-skip.db.init = true
+spring.datasource.url = ERROR
+spring.datasource.username = ERROR
+spring.datasource.password = ERROR
+spring.datasource.driver-class-name = ERROR
+spring.jpa.properties.hibernate.dialect = ERROR
+localhost.url = ERROR
+script.create = ERROR
+script.drop = ERROR
+skip.db.init = ERROR
 
 # App Properties
-studhub.app.jwtSecret=jwtStudHubSecretKey
+studhub.app.jwtSecret=ERROR
 # expires in a day
-studhub.app.accessTokenExpiration=86400
+studhub.app.accessTokenExpiration=ERROR
 # expires in a 10 days
-studhub.app.refreshTokenExpiration=864000
+studhub.app.refreshTokenExpiration=ERROR
 
 #Mail Properties
-spring.mail.host=smtp.gmail.com
-spring.mail.username=studhub.supp@gmail.com
-spring.mail.password=fdsjkl432gk
-spring.mail.port=587
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=true
+spring.mail.host=ERROR
+spring.mail.username=ERROR
+spring.mail.password=ERROR
+spring.mail.port=ERROR
+spring.mail.protocol=ERROR
+spring.mail.properties.mail.smtp.auth=ERROR
+spring.mail.properties.mail.smtp.starttls.enable=ERROR
+mail.debug=ERROR
 
 #Client Properties
-client.host=https://localhost:4200
-studhub.mail.noreply=no-reply@studhub-supp.com
-client.signature=https://studhub.com
+client.host=ERROR
+studhub.mail.noreply=ERROR
+client.signature=ERROR
 
 #Google Properties
-studhub.google.clientId=820600559774-rogh42iso9644ohsprs6g5grb828v20n.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.clientSecret=jOWf_-f1nAE4JrrV-jyZFZfJ
+studhub.google.clientId=ERROR
+spring.security.oauth2.client.registration.google.clientSecret=ERROR
 
 #Facebook Properties
-spring.social.facebook.appId=488187918662697
-spring.social.facebook.appSecret=f5652c746a040fb3e8b43a4c2ba285ad
+spring.social.facebook.appId=ERROR
+spring.social.facebook.appSecret=ERROR
 
 #Logging
 #Available profiles: file-debug, file-info, file-warn, console-warn, console-info (default spring output).
 #spring.profiles.active=console-info
-logging.file=app.log
+logging.file=ERROR
 
 #cloud.name=${CLOUD_NAME}
 #api.key=${API_KEY}
 #api.secret=${API_SECRET}
 
-cloud.name=studhubcloud
-api.key=728188731214736
-api.secret=8d9xEPsgdsDVGy71nWQxHZggOow
-cloudinary.url=cloudinary://728188731214736:8d9xEPsgdsDVGy71nWQxHZggOow@studhubcloud
-spring.servlet.multipart.max-file-size=4MB
+cloud.name=ERROR
+api.key=ERROR
+api.secret=ERROR
+cloudinary.url=ERROR
+spring.servlet.multipart.max-file-size=ERROR
+
+
+
+#spring.datasource.url = jdbc:mysql://localhost:3306/studhub?serverTimezone=UTC
+#spring.datasource.username = root
+#spring.datasource.password = root
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
+#script.create = create database studhub
+#script.drop = drop database studhub
+#skip.db.init = true
+#
+## App Properties
+#studhub.app.jwtSecret=jwtStudHubSecretKey
+## expires in a day
+#studhub.app.accessTokenExpiration=86400
+## expires in a 10 days
+#studhub.app.refreshTokenExpiration=864000
+#
+##Mail Properties
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=studhub.supp@gmail.com
+#spring.mail.password=fdsjkl432gk
+#spring.mail.port=587
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#mail.debug=true
+#
+##Client Properties
+#client.host=https://localhost:4200
+#studhub.mail.noreply=no-reply@studhub-supp.com
+#client.signature=https://studhub.com
+#
+##Google Properties
+#studhub.google.clientId=820600559774-rogh42iso9644ohsprs6g5grb828v20n.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.clientSecret=jOWf_-f1nAE4JrrV-jyZFZfJ
+#
+##Facebook Properties
+#spring.social.facebook.appId=488187918662697
+#spring.social.facebook.appSecret=f5652c746a040fb3e8b43a4c2ba285ad
+#
+##Logging
+##Available profiles: file-debug, file-info, file-warn, console-warn, console-info (default spring output).
+##spring.profiles.active=console-info
+#logging.file=app.log
+#
+##cloud.name=${CLOUD_NAME}
+##api.key=${API_KEY}
+##api.secret=${API_SECRET}
+#
+#cloud.name=studhubcloud
+#api.key=728188731214736
+#api.secret=8d9xEPsgdsDVGy71nWQxHZggOow
+#cloudinary.url=cloudinary://728188731214736:8d9xEPsgdsDVGy71nWQxHZggOow@studhubcloud
+#spring.servlet.multipart.max-file-size=4MB
 spring.profiles.active=dev
