testing app properties

--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = ERROR
 spring.datasource.username = ERROR
 spring.datasource.password = ERROR
-spring.datasource.driver-class-name = ERROR
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = ERROR
 localhost.url = ERROR
 script.create = ERROR
