--- a/application.properties
+++ b/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username = ERROR
 spring.datasource.password = ERROR
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = ERROR
-localhost.url = ERROR
+localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
 script.create = ERROR
 script.drop = ERROR
 skip.db.init = ERROR
