testing app properties

--- a/application.properties
+++ b/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect = ERROR
 localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
 script.create = ERROR
 script.drop = ERROR
-skip.db.init = ERROR
+skip.db.init = true
 
 # App Properties
 studhub.app.jwtSecret=ERROR
