experimenting with property plugin pom.xml

--- a/application-dev.properties
+++ b/application-dev.properties
@@ -30,6 +30,11 @@ client.host=https://localhost:4200
 studhub.mail.noreply=no-reply@studhub-supp.com
 client.signature=https://studhub.com
 
+server.ssl.key-store= classpath:keystore.jks
+server.ssl.key-store-password= 123456
+server.ssl.keyStoreType= JKS
+server.ssl.keyAlias= tomcatssl
+
 #Google Properties
 studhub.google.clientId=820600559774-rogh42iso9644ohsprs6g5grb828v20n.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret=jOWf_-f1nAE4JrrV-jyZFZfJ
