--- a/application.properties
+++ b/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url = ERROR
-spring.datasource.username = ERROR
-spring.datasource.password = ERROR
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = ERROR
-localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
-script.create = ERROR
-script.drop = ERROR
-skip.db.init = true
+#spring.datasource.url = ERROR
+#spring.datasource.username = ERROR
+#spring.datasource.password = ERROR
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = ERROR
+#localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
+#script.create = ERROR
+#script.drop = ERROR
+#skip.db.init = true
 
 ## App Properties
 #studhub.app.jwtSecret=ERROR
