--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@
 ### VS Code ###
 .vscode/
 
-###application.properties ###
+application-dev.properties
 !src/main/resources/application.properties
 
 *.log
