testing email notif heroku

--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -17,9 +17,9 @@ studhub.app.accessTokenExpiration=86400
 studhub.app.refreshTokenExpiration=864000
 
 #Mail Properties
-spring.mail.host=smtp.gmail.com
-spring.mail.username=studhub.supp@gmail.com
-spring.mail.password=fdsjkl432gk
+spring.mail.host=smtp.mailgun.org
+spring.mail.username=postmaster@sandboxf99cefb451b34422943f3f31fbc5ca7e.mailgun.org
+spring.mail.password=fa1923d7350cb2d054e43ae355943f6c-f877bd7a-9216bf15
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
