testing email notif heroku

--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -28,7 +28,7 @@ mail.debug=true
 
 #Client Properties
 client.host=https://localhost:4200
-studhub.mail.noreply=no-reply@studhub-supp.com
+studhub.mail.noreply=postmaster@sandboxf99cefb451b34422943f3f31fbc5ca7e.mailgun.org
 client.signature=https://studhub.com
 
 #Google Properties
