testing email notif heroku

--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -29,7 +29,7 @@ mail.debug=true
 #Client Properties
 client.host=https://localhost:4200
 studhub.mail.noreply=postmaster@sandboxf99cefb451b34422943f3f31fbc5ca7e.mailgun.org
-client.signature=https://studhub.com
+client.signature=postmaster@sandboxf99cefb451b34422943f3f31fbc5ca7e.mailgun.org
 
 #Google Properties
 studhub.google.clientId=820600559774-rogh42iso9644ohsprs6g5grb828v20n.apps.googleusercontent.com
