--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -3,6 +3,7 @@ spring.datasource.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds
 spring.datasource.username = y6r915q2o6w02ge6
 spring.datasource.password = nhl5kfo8fd1iziaz
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.maximumPoolSize: 6
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 localhost.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
 script.create = create database studhub
