--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@
 ### VS Code ###
 .vscode/
 
-application.properties
-!src/main/resources/application.properties
+application-dev.properties
 
 *.log
