--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8080}
-spring.datasource.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
-spring.datasource.username = y6r915q2o6w02ge6
-spring.datasource.password = nhl5kfo8fd1iziaz
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = ${DATASOURCE_URL}
+spring.datasource.username = ${DATASOURCE_USERNAME}
+spring.datasource.password = ${DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name = ${DATASOURCE_JDBC_DRIVER}
 spring.datasource.maximum-pool-size: 6
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 localhost.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
